@@ -51,7 +51,7 @@ static void memory2file(storage &s, generic_file &f);
 namespace libdar
 {
 
-    database::database()
+    database::database(const shared_ptr<user_interaction> & dialog): mem_ui(dialog)
     {
 	archive_data dat;
 
@@ -70,11 +70,8 @@ namespace libdar
 	algo = compression::gzip;   // stays the default algorithm for new databases
     }
 
-    database::database(const shared_ptr<user_interaction> & dialog, const string & base, const database_open_options & opt)
+    database::database(const shared_ptr<user_interaction> & dialog, const string & base, const database_open_options & opt): mem_ui(dialog)
     {
-	if(!dialog)
-	    throw SRC_BUG; // dialog points to nothing
-
 	generic_file *f = database_header_open(dialog,
 					       base,
 					       cur_db_version,
@@ -85,7 +82,7 @@ namespace libdar
 	try
 	{
 	    check_order_asked = opt.get_warn_order();
-	    build(dialog, *f, opt.get_partial(), opt.get_partial_read_only(), cur_db_version);
+	    build(*f, opt.get_partial(), opt.get_partial_read_only(), cur_db_version);
 	}
 	catch(...)
 	{
@@ -95,8 +92,7 @@ namespace libdar
 	delete f;
     }
 
-    void database::build(const shared_ptr<user_interaction> & dialog,
-			 generic_file & f,
+    void database::build(generic_file & f,
 			 bool partial,
 			 bool read_only,
 			 const unsigned char db_version)
@@ -105,9 +101,6 @@ namespace libdar
 	try
 	{
 	    struct archive_data dat;
-
-	    if(!dialog)
-		throw SRC_BUG; // dialog points to nothing
 
 	    if(db_version > database_header_get_supported_version())
 		throw SRC_BUG; // we should not get there if the database is more recent than what that software can handle. this is necessary if we do not want to destroy the database or loose data.
@@ -170,17 +163,13 @@ namespace libdar
 	    delete data_files;
     }
 
-    void database::dump(const shared_ptr<user_interaction> & dialog,
-			const std::string & filename,
+    void database::dump(const std::string & filename,
 			const database_dump_options & opt) const
     {
-	if(!dialog)
-	    throw SRC_BUG; // dialog points to nothing
-
 	if(files == nullptr && data_files == nullptr)
 	    throw Erange("database::dump", gettext("Cannot write down a read-only database"));
 
-	generic_file *f = database_header_create(dialog,
+	generic_file *f = database_header_create(get_pointer(),
 						 filename,
 						 opt.get_overwrite(),
 						 algo);
@@ -488,8 +477,7 @@ namespace libdar
     }
 
 
-    void database::restore(const std::shared_ptr<user_interaction> & dialog,
-			   const vector<string> & filename,
+    void database::restore(const vector<string> & filename,
 			   const database_restore_options & opt)
     {
 	NLS_SWAP_IN;
@@ -499,16 +487,13 @@ namespace libdar
 	    deque<string> anneau;
 	    const data_tree *ptr;
 
-	    if(!dialog)
-		throw SRC_BUG; // dialog points to nothing
-
 	    anneau.assign(filename.begin(), filename.end());
 	    if(files == nullptr)
 		throw SRC_BUG;
 
 	    if(opt.get_info_details())
-		dialog->message(gettext("Checking chronological ordering of files between the archives..."));
-	    check_order(dialog);
+		get_ui().message(gettext("Checking chronological ordering of files between the archives..."));
+	    check_order();
 
 		// determination of the archives to restore and files to restore for each selected file
 	    while(!anneau.empty())
@@ -531,15 +516,15 @@ namespace libdar
 		    case db_lookup::found_removed:
 			num_data.clear(); // we do not restore any data
 			if(opt.get_info_details())
-			    dialog->message(string(gettext("File recorded as removed at this date in database: ")) + anneau.front());
+			    get_ui().message(string(gettext("File recorded as removed at this date in database: ")) + anneau.front());
 			break;
 		    case db_lookup::not_found:
 			num_data.clear();
-			dialog->message(string(gettext("File not found in database: ")) + anneau.front());
+			get_ui().message(string(gettext("File not found in database: ")) + anneau.front());
 			break;
 		    case db_lookup::not_restorable:
 			num_data.clear();
-			dialog->message(string(gettext("File found in database but impossible to restore (only found \"unchanged\" in differential backups, or delta patch without reference to base it on in any previous archive of the base): ")) + anneau.front());
+			get_ui().message(string(gettext("File found in database but impossible to restore (only found \"unchanged\" in differential backups, or delta patch without reference to base it on in any previous archive of the base): ")) + anneau.front());
 			break;
 		    default:
 			throw SRC_BUG;
@@ -558,7 +543,7 @@ namespace libdar
 			break;
 		    case db_lookup::not_restorable:
 			num_ea = 0; // we cannot restore it
-			dialog->message(string(gettext("Extended Attribute of file found in database but impossible to restore (only found \"unchanged\" in differential backups): ")) + anneau.front());
+			get_ui().message(string(gettext("Extended Attribute of file found in database but impossible to restore (only found \"unchanged\" in differential backups): ")) + anneau.front());
 			break;
 		    default:
 			throw SRC_BUG;
@@ -571,7 +556,7 @@ namespace libdar
 			{
 			    string fic = anneau.front();
 			    if(opt.get_info_details())
-				dialog->printf(gettext("%S did not exist before specified date and cannot be restored"), &fic);
+				get_ui().printf(gettext("%S did not exist before specified date and cannot be restored"), &fic);
 			}
 		    }
 		    else // there is something to restore for that file
@@ -600,7 +585,7 @@ namespace libdar
 			    {
 				string fic = anneau.front();
 				if(!opt.get_even_when_removed())
-				    dialog->printf(gettext("Either archives in database are not properly tidied, or file last modification date has been artificially set to an more ancient date. This may lead improper Extended Attribute restoration for inode %S"), &fic);
+				    get_ui().printf(gettext("Either archives in database are not properly tidied, or file last modification date has been artificially set to an more ancient date. This may lead improper Extended Attribute restoration for inode %S"), &fic);
 			    }
 		    }
 
@@ -619,7 +604,7 @@ namespace libdar
 		else
 		{
 		    string fic = anneau.front();
-		    dialog->printf(gettext("Cannot restore file %S : non existent file in database"), &fic);
+		    get_ui().printf(gettext("Cannot restore file %S : non existent file in database"), &fic);
 		}
 		anneau.pop_front();
 	    }
@@ -665,26 +650,26 @@ namespace libdar
 			argvpipe += opt.get_extra_options_for_dar();
 			argvpipe += ut->second;
 
-			dialog->printf("CALLING DAR: restoring %d files from archive %S using anonymous pipe to transmit configuration to the dar process", ut->second.size()/2, &archive_name);
+			get_ui().printf("CALLING DAR: restoring %d files from archive %S using anonymous pipe to transmit configuration to the dar process", ut->second.size()/2, &archive_name);
 			if(opt.get_info_details())
 			{
-			    dialog->printf("Arguments sent through anonymous pipe are:");
-			    dialog->message(tools_concat_vector(" ", argvpipe));
+			    get_ui().printf("Arguments sent through anonymous pipe are:");
+			    get_ui().message(tools_concat_vector(" ", argvpipe));
 			}
-			tools_system_with_pipe(dialog, dar_cmd, argvpipe);
+			tools_system_with_pipe(get_pointer(), dar_cmd, argvpipe);
 		    }
 		    catch(Erange & e)
 		    {
-			dialog->message(string(gettext("Error while restoring the following files: "))
-				       + tools_concat_vector( " ", ut->second)
-				       + "   : "
-				       + e.get_message());
+			get_ui().message(string(gettext("Error while restoring the following files: "))
+					 + tools_concat_vector( " ", ut->second)
+					 + "   : "
+					 + e.get_message());
 		    }
 		    ut++;
 		}
 	    }
 	    else
-		dialog->message(gettext("Cannot restore any file, nothing done"));
+		get_ui().message(gettext("Cannot restore any file, nothing done"));
 	}
 	catch(...)
 	{
